fix alignment/centering, remove filter from contact logos

--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,6 @@
 :root {
   --sans-serif: "League Spartan", sans-serif;
 }
-/* .header-container {
-  color: #BBC7A4;
-  display: flex;
-  flex-direction: column;
-  flex-wrap:nowrap;
-  justify-content: flex-start;
-  align-items: stretch;
-  align-content: stretch;
-} */
 .side-nav {
   color: #2c363f;
   background-color: #d6dbd2;
@@ -25,46 +16,35 @@
   font-size: 3em;
   list-style: none;
   font-weight: 500;
-  /* text-shadow: 1px 1px 18px #D6DBD2; */
   font-family: var(--sans-serif);
   margin: 10px 0;
   
 }
 #about {
   list-style: none;
-  /* text-align: center; */
   font-family: var(--sans-serif);
   font-weight: 400;
-  /* padding: 2% 0 0 2%; */
   margin: 10px 0;
-  /* box-sizing: border-box; */
 }
 #work {
   list-style: none;
-  /* text-align: center; */
   font-family: var(--sans-serif);
   font-weight: 400;
-  /* padding-left: 2%; */
   margin: 10px 0;
 }
 #resume {
   list-style: none;
-  /* text-align: center; */
   font-family: var(--sans-serif);
   font-weight: 400;
-  /* padding-left: 2%; */
   margin: 10px 0;
 }
 #contact {
   list-style: none;
-  /* text-align: center; */
   font-family: var(--sans-serif);
   font-weight: 400;
-  /* padding-left: 2%; */
   margin: 10px 0;
 }
 ul {
-  /* margin-left: 10%; */
   margin-right: 10%;
 }
 hr.solid {
@@ -74,15 +54,14 @@ hr.solid {
   text-align: center;
   justify-content: center;
   color: #c9d7af;
-  /* display: flex; */
   font-size: 5em;
   font-weight: 500;
   font-family: var(--sans-serif);
-  margin: 4% 0 4% 250px;
+  margin: 4% 5% 4% 25%;
 }
 #text-area {
-  /* text-align: left; */
   display: flex;
+  justify-content: center;
   font-family: var(--sans-serif);
   font-size: 2em;
   font-weight: 400;
@@ -99,20 +78,18 @@ hr.solid {
   margin-bottom: 45%;
   margin-left: 25%;
   color: #bbc7a4;
-  filter: invert(25%);
-  box-shadow: inset
+  background-size: contain;
+  line-height: 2ch;
 }
 #samsara {
   color: #9e7682;
   align-items: center;
   border: 2px solid #2c363f;
   text-align: center;
-  justify-content: right;
   background-color: #d6dbd2;
   position: fixed;
   bottom: 4%;
   left: 0;
-  /* width: 15%; */
   margin-left: 0.4%;
 }
 #samsara:hover{
@@ -126,19 +103,16 @@ color: #d6dbd2;
 }
 #hourglass {
   color: #9e7682;
-  justify-content: right;
   border: 2px solid #2c363f;
   background-color:#d6dbd2;
   text-align: center;
   position: fixed;
   bottom: 0;
   left: 0;
-  /* width: 15%; */
   margin-left: 0.4%;
 }
 html {
   background-color: #2c363f;
-  /* border: 5px solid #BBC7A4; */
 }
 .nav-div {
   font-size: 2em;
@@ -153,23 +127,23 @@ a:link{
   color: #964756;
 }
 .nav-div:hover {
-  /* animation-name: scale; */
-  /* animation-duration: 1s; */
+  animation-name: scale;
+  animation-duration: 1s;
   color: #9e7682;
 }
 #home-btn:hover {
-  /* animation-name: scale; */
-  /* animation-duration: 1s; */
+  animation-name: scale;
+  animation-duration: 1s;
   color: #9e7682;
 }
-/* @keyframes scale {
+@keyframes scale {
   0% {
     transform: scale(0.9);
   }
   100% {
     transform: scale(1);
   }
-} */
+}
 @media only screen and (max-width: 768px) {
   * {
     font-size: 90%;
@@ -180,7 +154,7 @@ a:link{
   }
   #text-area {
     padding: 10% 0;
-    padding-left: 10%;
+    /* padding-left: 10%; */
     left: 10%;
     justify-content: center;
     text-align: center;
@@ -190,9 +164,9 @@ a:link{
     justify-content: space-around;
     align-items: center;
     padding: 1px 0;
-    padding-left: 15%;
+    /* padding-left: 15%; */
     padding-right: 1;
-    left: 20%;
+    left: 10%;
     
   }
   .side-nav,
@@ -202,7 +176,7 @@ a:link{
     padding-left: 5%;
   }
   #home-btn {
-    padding-left: 1px;
+    /* padding-left: 1px; */
   }
   #title {
     padding-left: 20%;
